# v0-raffle

./: .gitignore  DEPLOYMENT.md  README.md  package.json  pnpm-lock.yaml  requirements.txt
app/: page.tsx
app/rifas/: page.tsx
components/: aveit-dashboard.tsx
contracts/: Cargo.toml  raffle.rs
lib/: polkadot-client.ts  polkadot_client.py
scripts/: deploy_contract.py  raffle_program.py  setup_environment.sh  setup_polkadot.py
solana/: SolanaRaffleClient.tsx
tests/: test_contract_integration.py  test_polkadot_client.py
